--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,8 @@ html {
   --surface-container-low: 278 44% 96%;
   --surface-container-highest: 280 17% 90%;
   --on-surface: 255 7% 11%;
+  --inverse-surface: 260 3% 19%;
+  --inverse-on-surface: 300 19% 95%;
   --background: 293 100% 98%;
   --error: 3 71% 41%;
   --on-error: 0 0% 100%;
@@ -28,6 +30,8 @@ html.dark {
   --surface-container-low: 264 8% 12%;
   --surface-container-highest: 257 6% 22%;
   --on-surface: 312 9% 89%;
+  --inverse-surface: 312 9% 89%;
+  --inverse-on-surface: 260 3% 19%;
   --background: 260 14% 8%;
   --error: 3 70% 83%;
   --on-error: 3 71% 22%;
