feat: added navigation bar component

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,7 @@ html {
   --error: 3 71% 41%;
   --on-error: 0 0% 100%;
   --outline: 270 4% 47%;
+  --outline-variant: 140 3% 77%;
   --font-weight-multiplier: 1;
   --inverse-font-weight-multiplier: 0.8;
 }
@@ -44,14 +45,11 @@ html.dark {
   --error: 3 70% 83%;
   --on-error: 3 71% 22%;
   --outline: 264 5% 58%;
+  --outline-variant: 160 2% 27%;
   --font-weight-multiplier: 0.8;
   --inverse-font-weight-multiplier: 1.1;
 }
 
 .inverse-font-weight-multiplier {
   --font-weight-multiplier: var(--inverse-font-weight-multiplier);
-}
-
-.standard-font-weight-multiplier {
-  --font-weight-multiplier: var(--font-weight-multiplier) !important;
 }
