--- a/src/components/containment/Table/index.css
+++ b/src/components/containment/Table/index.css
@@ -1,12 +1,17 @@
 .table {
-  @apply outline-surface-2 text-on-surface text-body-medium w-full overflow-hidden rounded-md outline outline-1;
+  @apply outline-surface-2 text-on-surface-variant overflow-hidden rounded-md outline outline-1;
+
+  & td,
+  & th {
+    @apply h-12 px-4;
+  }
 
   & thead {
     @apply bg-surface-2;
 
     & tr {
       & > th {
-        @apply text-title-small  px-4 py-3 text-left;
+        @apply text-title-small text-on-surface text-left;
       }
     }
   }
@@ -16,7 +21,7 @@
 
     & tr {
       & > td {
-        @apply px-4 py-3;
+        @apply text-body-medium;
       }
 
       &:nth-child(odd) {
